--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,116 @@
 
+/.gitignore
+
+# IDE & System Related Files
+.buildpath
+.project
+.settings
+
+# OSX 
+._*
+.Spotlight-V100
+.Trashes
+.DS_Store
+
+# Windows 
+Thumbs.db
+Desktop.ini
+
+# IntelliJ - PhpStorm and PyCharm
+.idea
+.idea/
+.idea/*
+*.iml
+*.ipr
+*.iws
+
+
+# Magento Files & Directory 
+
+.htaccess.sample
+.modgit/
+.modman/
+app/code/community/Phoenix/
+app/code/community/Cm/
+app/code/core/
+app/design/adminhtml/default/default/
+app/design/frontend/base/
+app/design/frontend/rwd/
+app/design/frontend/default/blank/
+app/design/frontend/default/default/
+app/design/frontend/default/iphone/
+app/design/frontend/default/modern/
+app/design/frontend/enterprise/default
+app/design/install/
+app/etc/modules/Enterprise_*
+app/etc/modules/Mage_All.xml
+app/etc/modules/Mage_Api.xml
+app/etc/modules/Mage_Api2.xml
+app/etc/modules/Mage_Authorizenet.xml
+app/etc/modules/Mage_Bundle.xml
+app/etc/modules/Mage_Captcha.xml
+app/etc/modules/Mage_Centinel.xml
+app/etc/modules/Mage_Compiler.xml
+app/etc/modules/Mage_ConfigurableSwatches.xml
+app/etc/modules/Mage_Connect.xml
+app/etc/modules/Mage_CurrencySymbol.xml
+app/etc/modules/Mage_Downloadable.xml
+app/etc/modules/Mage_ImportExport.xml
+app/etc/modules/Mage_LoadTest.xml
+app/etc/modules/Mage_Oauth.xml
+app/etc/modules/Mage_PageCache.xml
+app/etc/modules/Mage_Persistent.xml
+app/etc/modules/Mage_Weee.xml
+app/etc/modules/Mage_Widget.xml
+app/etc/modules/Mage_XmlConnect.xml
+app/etc/modules/Phoenix_Moneybookers.xml
+app/etc/modules/Cm_RedisSession.xml
+app/etc/applied.patches.list
+app/etc/config.xml
+app/etc/enterprise.xml
+app/etc/local.xml.additional
+app/etc/local.xml.template
+app/etc/local.xml
+app/.htaccess
+favicon.ico
+/get.php
+/index.php
+index.php.sample
+LICENSE_AFL.txt
+LICENSE.html
+LICENSE.txt
+LICENSE_EE*
+mage
+/api.php
+nbproject/
+pear
+pear/
+php.ini.sample
+pkginfo/
+RELEASE_NOTES.txt
+sitemap.xml
+pub/media/customer
+pub/media/downloadable
+pub/media/import
+pub/media/theme
+pub/media/theme_customization
+pub/media/tmp
+.htaccess
+.php_cs
+.travis.yml
+.user.ini
+
+app/autoload.php
+app/bootstrap.php
+app/etc/
+app/functions.php
+
+pub/.htaccess
+pub/.user.ini
+pub/cron.php
+pub/errors/
+pub/get.php
+pub/index.php
+pub/static.php
+pub/static/
+
